<resources>
    <string name="app_name">Water Reservoir</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_forgot_password">Forgot your password?</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <!-- Main -->
    <string name="reservoirs">Reservoirs</string>
    <string name="devices">Devices</string>
    <string name="last_measurements">Last measurements</string>
    <string name="share">Share</string>
    <string name="meter_cubic">m&#179;</string>
    <string name="liter_per_minute">L/m</string>
    <string name="menu">Menu</string>
    <string name="level_sensor">Level Sensor</string>
    <string name="flow_sensor">Flow Sensor</string>
    <string name="data_nothing">-</string>

</resources>
