<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="br.senac.waterreservoir.ui.activity.MainActivity"
    android:id="@+id/main"
    android:background="@color/colorBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/loading"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />

        <TextView
            android:text="@string/reservoirs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reservoirLabel"
            android:layout_alignParentStart="true" />

        <Spinner
            android:id="@+id/reservoirSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/reservoirLabel"
            android:minHeight="35dp"
            android:spinnerMode="dialog" />

        <TextView
            android:text="@string/devices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/devicesLabel"
            android:layout_below="@+id/reservoirSpinner"
            android:layout_alignParentStart="true" />

        <Spinner
            android:id="@+id/deviceSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/devicesLabel"
            android:minHeight="35dp"
            android:spinnerMode="dialog" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lastMeasurements"
            android:gravity="center"
            android:layout_below="@+id/deviceSpinner"
            android:text="@string/last_measurements"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/lastMeasurements"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp">

            <!-- Level Sensor -->

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="15dp"
                card_view:cardCornerRadius="5dp"
                card_view:cardElevation="2dp">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    style="?android:attr/actionOverflowButtonStyle"
                    android:onClick="showPopupLevelSensor"
                    android:contentDescription="@string/menu" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/levelSensorIcon"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginEnd="16dp"
                        android:contentDescription="@string/level_sensor"
                        android:minWidth="100dp"
                        android:minHeight="100dp"
                        android:src="@drawable/ic_assessment_black_24dp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/levelSensorLabel"
                        android:layout_toEndOf="@+id/levelSensorIcon"
                        android:layout_alignParentTop="true"
                        android:textSize="17sp"
                        android:text="@string/level_sensor"
                        android:layout_marginBottom="5dp"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/levelSensorDataLayout"
                        android:layout_toEndOf="@+id/levelSensorIcon"
                        android:layout_below="@+id/levelSensorLabel"
                        android:orientation="horizontal"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/levelSensorData"
                            android:text="@string/data_nothing"
                            android:textSize="45sp"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/levelSensorUnit"
                            android:text="@string/meter_cubic"
                            android:textSize="25sp"
                            android:layout_marginStart="5dp"
                            android:visibility="invisible"
                            />

                    </LinearLayout>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <!-- Flow Sensor -->

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="15dp"
                card_view:cardCornerRadius="5dp"
                card_view:cardElevation="2dp">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    style="?android:attr/actionOverflowButtonStyle"
                    android:onClick="showPopupFlowSensor"
                    android:contentDescription="@string/menu" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/flowSensorIcon"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginEnd="16dp"
                        android:contentDescription="@string/flow_sensor"
                        android:minWidth="100dp"
                        android:minHeight="100dp"
                        android:src="@drawable/ic_cached_black_24dp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/flowSensorLabel"
                        android:layout_toEndOf="@+id/flowSensorIcon"
                        android:layout_alignParentTop="true"
                        android:textSize="17sp"
                        android:text="@string/flow_sensor"
                        android:layout_marginBottom="5dp"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/flowSensorDataLayout"
                        android:layout_toEndOf="@+id/flowSensorIcon"
                        android:layout_below="@+id/flowSensorLabel"
                        android:orientation="horizontal"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/flowSensorData"
                            android:text="@string/data_nothing"
                            android:textSize="45sp"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/flowSensorUnit"
                            android:text="@string/liter_per_minute"
                            android:textSize="25sp"
                            android:layout_marginStart="5dp"
                            android:visibility="invisible"
                            />

                    </LinearLayout>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>
